--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "pg": "6.4.2",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.2"
+    "sequelize": "^5.21.2",
+    "sequelize-noupdate-attributes": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.4",
