--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mem": "5.1.1",
     "pg": "6.4.2",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.2",
